# living-kb

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
scripts/: bootstrap-postgres.ps1  start-api.ps1  start-worker.ps1
src/living_kb/: config.py  db.py  main.py  models.py  schemas.py  utils.py  vector_types.py  worker.py
src/living_kb/api/: routes.py
src/living_kb/services/: compiler.py  embeddings.py  health.py  ingestion.py  jobs.py  llm.py  query.py  scheduler.py
src/living_kb/web/: index.html
src/living_kb/web/static/: app.css  app.js
tests/: test_smoke.py
